added basic box structure of site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div class="main">
-
+        <div class="display-box">
+            <div class="country-box"></div>
+            <div class="date-box"></div>
+            <div class="clock-box"></div>
+            <div class="day-box"></div>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
