added dummy date

--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 <body>
     <div class="main">
         <div class="display-box">
-            <div class="country-box"></div>
-            <div class="date-box"></div>
-            <div class="clock-box"></div>
+            <div class="country-box">IND</div>
+            <div class="date-box">
+                <div>02</div>
+                <div>30</div>
+                <div>21</div>
+            </div>
             <div class="day-box"></div>
+            <div class="clock-box">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            
         </div>
     </div>
     <script src="./script.js"></script>
