added locales for different countries

--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
         <div class="display-box">
             <div class="country-box">IND</div>
             <div class="date-box">
-                <div>02</div>
-                <div>30</div>
-                <div>21</div>
+                30-02-2024
             </div>
-            <div class="day-box"></div>
+            <div class="day-box">Mon</div>
             <div class="clock-box">
-                <div></div>
-                <div></div>
-                <div></div>
+                00 : 28 : 55
             </div>
             
         </div>
