--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div class="display-box">
             <div class="country-box">IND</div>
             <div class="date-box">
-                30-02-2024
+
             </div>
             <div class="day-box">Mon</div>
             <div class="clock-box">
-                00 : 28 : 55
+
             </div>
             
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./script.mjs" type="module"></script>
 </body>
 </html>
 
