started adding npm modules, prettier and exlint

--- a/index.html
+++ b/index.html
@@ -1,28 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./reset.css" />
+        <link rel="stylesheet" href="./style.css" />
 
-    <title>World Clock</title>
-</head>
-<body>
-    <div class="main">
-        <div class="display-box">
-            <div class="country-box">IND</div>
-            <div class="date-box">
-
+        <title>World Clock</title>
+    </head>
+    <body>
+        <div class="main">
+            <div class="display-box">
+                <div class="country-box">IND</div>
+                <div class="date-box"></div>
+                <div class="day-box">Mon</div>
+                <div class="clock-box"></div>
             </div>
-            <div class="day-box">Mon</div>
-            <div class="clock-box">
-
-            </div>
-            
         </div>
-    </div>
-    <script src="./script.mjs" type="module"></script>
-</body>
+        <script src="./script.mjs" type="module"></script>
+    </body>
 </html>
-
