made ui dynamic

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     </head>
     <body>
         <div class="main">
-            <div class="display-box">
+            <!-- <div class="display-box">
                 <div class="country-box">IND</div>
                 <div class="date-box"></div>
                 <div class="day-box">Mon</div>
                 <div class="clock-box"></div>
-            </div>
+            </div> -->
         </div>
+        <!-- <script src="./ui.mjs"></script> -->
         <script src="./script.mjs" type="module"></script>
     </body>
 </html>
