made basic structure of modal page

--- a/playground/modal/index.html
+++ b/playground/modal/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./style.css" rel="stylesheet">
     <title>Modal</title>
 </head>
 <body>
-    
+    <section class="modal hidden"></section>
+    <div class="overlay hidden"></div>
+    <div class="btn btn-open">Open Modal</div>
+    <script src="./script.js"></script>
 </body>
 </html>
