started working on modal

--- a/playground/modal/index.html
+++ b/playground/modal/index.html
@@ -7,9 +7,25 @@
     <title>Modal</title>
 </head>
 <body>
-    <section class="modal hidden"></section>
-    <div class="overlay hidden"></div>
-    <div class="btn btn-open">Open Modal</div>
+    <div class="main">
+        <section class="modal hidden">
+            <div class="flex">
+                <img src="./account_circle_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="user" width="50px" height="50px">
+                <button class="btn-close">X</button>
+            </div>
+            <div>
+                <h3>Stay in touch</h3>
+                <p>
+                    This is a dummy newsletter form so don't bother trying to test it. Not
+      that I expect you to, anyways. :)
+                </p>
+            </div>
+            <input type="email" id="email" placeholder="anshusuperstar15@gmail.com">
+            <button class="btn">Submit</button>
+        </section>
+        <!-- <div class="overlay hidden"></div>
+        <div class="btn btn-open">Open Modal</div> -->
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
