created open modal button and modal

--- a/playground/modal/index.html
+++ b/playground/modal/index.html
@@ -23,8 +23,8 @@
             <input type="email" id="email" placeholder="anshusuperstar15@gmail.com">
             <button class="btn">Submit</button>
         </section>
-        <!-- <div class="overlay hidden"></div>
-        <div class="btn btn-open">Open Modal</div> -->
+        <!-- <div class="overlay hidden"></div>-->
+        <div class="btn btn-open">Open Modal</div> 
     </div>
     <script src="./script.js"></script>
 </body>
