--- a/playground/modal/index.html
+++ b/playground/modal/index.html
@@ -23,7 +23,7 @@
             <input type="email" id="email" placeholder="anshusuperstar15@gmail.com">
             <button class="btn">Submit</button>
         </section>
-        <!-- <div class="overlay hidden"></div>-->
+        <div class="overlay hidden"></div>
         <div class="btn btn-open">Open Modal</div> 
     </div>
     <script src="./script.js"></script>
