--- a/playground/modal/index.html
+++ b/playground/modal/index.html
@@ -1,31 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./style.css" rel="stylesheet">
-    <title>Modal</title>
-</head>
-<body>
-    <div class="main">
-        <section class="modal hidden">
-            <div class="flex">
-                <img src="./account_circle_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="user" width="50px" height="50px">
-                <button class="btn-close">X</button>
-            </div>
-            <div>
-                <h3>Stay in touch</h3>
-                <p>
-                    This is a dummy newsletter form so don't bother trying to test it. Not
-      that I expect you to, anyways. :)
-                </p>
-            </div>
-            <input type="email" id="email" placeholder="anshusuperstar15@gmail.com">
-            <button class="btn">Submit</button>
-        </section>
-        <div class="overlay hidden"></div>
-        <div class="btn btn-open">Open Modal</div> 
-    </div>
-    <script src="./script.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="./style.css" rel="stylesheet" />
+        <title>Modal</title>
+    </head>
+    <body>
+        <div class="main">
+            <section class="modal hidden">
+                <div class="flex">
+                    <img
+                        src="./account_circle_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg"
+                        alt="user"
+                        width="50px"
+                        height="50px"
+                    />
+                    <button class="btn-close">X</button>
+                </div>
+                <div>
+                    <h3>Stay in touch</h3>
+                    <p>
+                        This is a dummy newsletter form so don't bother trying
+                        to test it. Not that I expect you to, anyways. :)
+                    </p>
+                </div>
+                <input
+                    type="email"
+                    id="email"
+                    placeholder="anshusuperstar15@gmail.com"
+                />
+                <button class="btn">Submit</button>
+            </section>
+            <div class="overlay hidden"></div>
+            <div class="btn btn-open">Open Modal</div>
+        </div>
+        <script src="./script.js"></script>
+    </body>
 </html>
