--- a/playground/dropdown/index.html
+++ b/playground/dropdown/index.html
@@ -9,5 +9,36 @@
         />
         <title>Dropdown</title>
     </head>
-    <body></body>
+    <body>
+        <button class="btn" id="btn">
+            Dropdown
+            <img src="./icons/arrow_drop_down.svg" alt="drop down arrow">
+        </button>
+        <div class="dropdown" id="dropdown">
+            <a href="#create">
+                <img src="./icons/add_circle.svg" alt="create">
+                Create New
+            </a>
+            <a href="#draft">
+                <img src="./icons/all_inbox.svg" alt="">
+                All Drafts
+            </a>
+            <a href="#move">
+                <img src="./icons/folder" alt="">
+                Move To
+            </a>
+            <a href="#profile">
+                <img src="./icons/person.svg" alt="">
+                Profile Settings
+            </a>
+            <a href="#notification">
+                <img src="./icons/notifications.svg" alt="">
+                Notifications
+            </a>
+            <a href="#settings">
+                <img src="./icons/settings.svg" alt="">
+                Settings
+            </a>
+        </div>
+    </body>
 </html>
