--- a/playground/meow/index.html
+++ b/playground/meow/index.html
@@ -8,6 +8,11 @@
     </head>
     <body>
         <div class="main">
+            <div class="modal">
+                <div class="head">
+                    <button class="close-btn">X</button>
+                </div>
+            </div>
             <button class="btn">Press</button>
         </div>
     </body>
