--- a/playground/meow/index.html
+++ b/playground/meow/index.html
@@ -8,12 +8,13 @@
     </head>
     <body>
         <div class="main">
-            <div class="modal">
+            <div class="modal hidden">
                 <div class="head">
                     <button class="close-btn">X</button>
                 </div>
             </div>
             <button class="btn">Press</button>
         </div>
+        <script src="./script.js"></script>
     </body>
 </html>
