--- a/playground/meow/index.html
+++ b/playground/meow/index.html
@@ -14,6 +14,7 @@
                 </div>
             </div>
             <button class="btn">Press</button>
+            <div class="overlay"></div>
         </div>
         <script src="./script.js"></script>
     </body>
