intial css setup

--- a/playground/modal/index.html
+++ b/playground/modal/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="main">
-            <section class="modal hidden">
+            <!-- <section class="modal hidden">
                 <div class="flex">
                     <img
                         src="./account_circle_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg"
@@ -32,7 +32,7 @@
                 />
                 <button class="btn">Submit</button>
             </section>
-            <div class="overlay hidden"></div>
+            <div class="overlay hidden"></div> -->
             <div class="btn btn-open">Open Modal</div>
         </div>
         <script src="./script.js"></script>
