--- a/playground/dropdown/index.html
+++ b/playground/dropdown/index.html
@@ -3,40 +3,37 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-            rel="stylesheet"
-        />
+        <link href="./style.css" rel="stylesheet" />
         <title>Dropdown</title>
     </head>
     <body>
         <button class="btn" id="btn">
             Dropdown
-            <img src="./icons/arrow_drop_down.svg" alt="drop down arrow">
+            <img src="./icons/arrow_drop_down.svg" alt="drop down arrow" />
         </button>
         <div class="dropdown" id="dropdown">
             <a href="#create">
-                <img src="./icons/add_circle.svg" alt="create">
+                <img src="./icons/add_circle.svg" alt="create" />
                 Create New
             </a>
             <a href="#draft">
-                <img src="./icons/all_inbox.svg" alt="">
+                <img src="./icons/all_inbox.svg" alt="" />
                 All Drafts
             </a>
             <a href="#move">
-                <img src="./icons/folder" alt="">
+                <img src="./icons/folder" alt="" />
                 Move To
             </a>
             <a href="#profile">
-                <img src="./icons/person.svg" alt="">
+                <img src="./icons/person.svg" alt="" />
                 Profile Settings
             </a>
             <a href="#notification">
-                <img src="./icons/notifications.svg" alt="">
+                <img src="./icons/notifications.svg" alt="" />
                 Notifications
             </a>
             <a href="#settings">
-                <img src="./icons/settings.svg" alt="">
+                <img src="./icons/settings.svg" alt="" />
                 Settings
             </a>
         </div>
