added dropdwon effect

--- a/playground/dropdown/index.html
+++ b/playground/dropdown/index.html
@@ -9,7 +9,11 @@
     <body>
         <button class="btn" id="btn">
             Dropdown
-            <img src="./icons/arrow_drop_down.svg" alt="drop down arrow" />
+            <img
+                src="./icons/arrow_drop_down.svg"
+                alt="drop down arrow"
+                id="arrow"
+            />
         </button>
         <div class="dropdown" id="dropdown">
             <a href="#create">
