--- a/playground/carousel/index.html
+++ b/playground/carousel/index.html
@@ -7,6 +7,14 @@
         <title>Css Carousel</title>
     </head>
     <body>
+        <div class="main">
+            <div class="carousel">
+                <div class="carousel-slide" id="1"></div>
+                <div class="carousel-slide" id="2"></div>
+                <div class="carousel-slide" id="3"></div>
+                <div class="carousel-slide" id="4"></div>
+            </div>
+        </div>
         <script src="./script.js"></script>
     </body>
 </html>
